--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #111111;
     color: #fff;
@@ -7,13 +7,13 @@ body{
     text-align: center;
 }
 
-header{
+header {
     background-color: #1e90ff;
     padding: 20px;
     font-size: 1.8em;
 }
 
-main{
+main {
     max-width: 990px;
     background-color: #222222;
     border-radius: 5px;
@@ -22,11 +22,22 @@ main{
     padding: 20px;
 }
 
-.negrito{
+.banner {
+    width: 100%;
+    border-radius: 15px;
+}
+
+.gap {
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.negrito {
     font-weight: bold;
 }
 
-.cards{
+.cards {
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -34,7 +45,7 @@ main{
     justify-content: center;
 }
 
-.card{
+.card {
     padding: 10px;
     background-color: #414040;
     width: 250px;
@@ -42,12 +53,12 @@ main{
     border-radius: 10px;
 }
 
-.card img{
+.card img {
     width: 100%;
     border-radius: 10px;
 }
 
-.botao{
+.botao {
     background-color: #ee650a;
     border-radius: 10px;
     cursor: pointer;
@@ -56,13 +67,20 @@ main{
     border: none;
     color: #fff;
     font-weight: bold;
+    transition: transform 0.2s ease-in-out;
+}
+
+.botao:hover {
+    background-color: #ca5506;
+    transform: scale(1.1);
 }
 
 @media (max-width: 600px) {
-    .card{
+    .card {
         width: 95%;
     }
-    .botao{
+
+    .botao {
         background-color: #111111;
     }
 }
