--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
+@import url('variable.css');
+
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #111111;
-    color: #fff;
+    background-color: var(--bg-color-body);
+    color: var(--text-color);
     margin: 0;
     padding: 0;
     text-align: center;
@@ -15,7 +19,7 @@ header {
 
 main {
     max-width: 990px;
-    background-color: #222222;
+    background-color: var(--bg-color-container);
     border-radius: 5px;
     box-shadow: 0 0 5px #222;
     margin: 20px auto;
