--- a/css/index.css
+++ b/css/index.css
@@ -88,3 +88,42 @@ main {
         background-color: #111111;
     }
 }
+
+.hidden {
+    display: none !important;
+}
+
+.modal{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(8, 8, 8, 0.8);
+    z-index: 1000;
+    position: fixed;
+    overflow: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 0;
+}
+
+.modal-content{
+    border: 1px solid #1d1d1d;
+    border-radius: 10px;
+    background-color: var(--bg-color-container);
+    box-shadow: 0 0 20px #111111;
+    padding: 20px;
+    text-align: left;    
+    position: relative; /*adicionei agora*/
+}
+
+.fechar{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
