--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,5 @@
 @import url('variable.css');
 
-
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--bg-color-body);
@@ -15,6 +13,26 @@ header {
     background-color: #1e90ff;
     padding: 20px;
     font-size: 1.8em;
+    position: relative;
+}
+
+.botao-alterar-tema{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    border-radius: 8px;
+    background-color: #ee650a;
+    cursor: pointer;
+    border: none;
+    padding: 10px;
+    color: #dddcdc;
+    font-weight: bold;
+    transition: background-color 0.2s ease-in-out;
+    font-size: 0.5em;
+}
+
+.botao-alterar-tema:hover{
+    background-color: #ca5506;
 }
 
 main {
